<resources>
    <string name="app_name">Tracking delivery</string>

    <string name="title_delivery_feed">배송조회</string>
    <string name="title_search_delivery">택배조회</string>
    <string name="title_myhome">마이홈</string>

    <string name="detail_basic_information">기본정보</string>
    <string name="detail_status_information">상태정보</string>
    <string name="detail_time">시간</string>

    <string name="detail_company">택배</string>
    <string name="detail_number">송장번호</string>
    <string name="detail_sender">보내는 분</string>
    <string name="detail_recipient">받는 분</string>
    
    <string name="recycling_action">상태</string>
    <string name="recycling_message">배송 메세지</string>
    <string name="recycling_time">시간</string>
    <string name="recycling_location">위치</string>
    <string name="recycling_status">상품상태</string>

    <string name="cpwd_box_missage">로그인 화면으로 돌아갑니다.</string>
    <string name="cpwd_box_cancel">확인</string>

    <string name="kakao">카카오톡으로 로그인</string>
    <string name="naver">네이버로 로그인</string>
    <string name="facebook">페이스북으로 로그인</string>
    <string name="email_login_weeding">이메일로 로그인</string>
    <string name="email_sign_up">이메일로 가입하기</string>
    <string name="auto_login">자동로그인</string>
    <string name="action_sign_in">로그인</string>
    <string name="password_reset">비밀번호 재설정</string>
    <string name="password_hint">비밀번호</string>
    <string name="email_hint">이메일</string>
    <string name="error_field_required">이메일을 입력해주세요.</string>
    <string name="error_invalid_email">이메일 형식을 지켜주세요.</string>
    <string name="change_old_password">현재 비밀번호</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="change_password_check">비밀번호 확인</string>
    <string name="change_password_btn">변경하기</string>
    <string name="change_password">설정할 비밀번호</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email</string>

</resources>
