<android.support.v7.widget.CardView android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/action_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="@string/recycling_action"
            />

        <TextView
            android:id="@+id/message_cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:text="@string/recycling_message"
            />

        <TextView
            android:id="@+id/time_caredview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recycling_time"
            android:padding="5dp"
            />

        <TextView
            android:id="@+id/location_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/recycling_location"
            />

        <TextView
            android:id="@+id/status_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/recycling_status"
            />



    </LinearLayout>
</android.support.v7.widget.CardView>