<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".View.Login.EmailLoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

            <Button
            android:id="@+id/kakao_email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/kakao"
            android:radius="10dp"
            />

            <Button
            android:id="@+id/naver_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:radius="10dp"
            android:text="@string/naver"
            />

            <Button
            android:id="@+id/facebook_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:radius="10dp"
            android:text="@string/facebook"
            />


            <LinearLayout
                android:id="@+id/email_login_button_from"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="10"
                android:layout_marginTop="10dp"
                >

            <TextView
                android:id="@+id/email_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_login_weeding"
                android:layout_weight="5"
                android:layout_marginLeft="20dp"
                android:gravity="center"

                />

            <TextView
                android:id="@+id/email_sign_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_sign_up"
                android:layout_weight="5"
                android:gravity="center"
                android:layout_marginRight="20dp"
                />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>