<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/detail_basic_information"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"

            />

        <include layout="@layout/ui_deliveryinfo_item"

            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/detail_status_information"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/detail_time"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/detailrecyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">




        </android.support.v7.widget.RecyclerView>



    </LinearLayout>









</android.support.constraint.ConstraintLayout>