<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_company"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="testttttttt"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_number"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/invoicNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="test2222222"
                />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_sender"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/sender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="test2222222"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_recipient"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/recipient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="test2222222"
                />

        </LinearLayout>


    </LinearLayout>



</android.support.constraint.ConstraintLayout>